--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<a href="https://learningapps.org/watch?v=pz33f29pc20"><img class="ani" src="zd.png"  alt=""></a>
+<a href="tyla.html"><img class="ani" src="zd.png"  alt=""></a>
 </body>
 </html>
